--- a/about.html
+++ b/about.html
@@ -78,16 +78,16 @@
   <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
+      <a href="index.html" class="nav-link rounded-5 btn">Home</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
+      <a href="about.html" class="nav-link rounded-5 btn active" aria-current="page">About</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
+      <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
+      <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
     </li>
   </ul>
 
