--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,19 @@
     <!-- Basic Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- SEO Essentials -->
     <title>Blog | MyWebsite</title>
     <meta name="description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
+    <meta name="keywords" content="Web Development, Mobile Apps, SEO, Blog, Technology, Marketing" />
+    
+    <!-- Open Graph Meta Tags for better social media sharing -->
+    <meta property="og:title" content="Blog | MyWebsite" />
+    <meta property="og:description" content="Explore expert articles on web development, mobile apps, SEO, and more." />
+    <meta property="og:image" content="img/Blog/og-image.jpg" />
+    <meta property="og:url" content="https://mywebsite.com/blog.html" />
+    <meta property="og:type" content="website" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
@@ -68,27 +78,34 @@
             margin: 5px 0;
             word-wrap: break-word;
         }
+
+        /* Responsive Fix */
+        @media (max-width: 768px) {
+            .blog-header h1 {
+                font-size: 2rem;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <!-- nevegation -->
+    <!-- Navbar -->
     <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
         <li class="nav-item" role="presentation">
-            <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
+            <a href="index.html" class="nav-link rounded-5 btn">Home</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
+            <a href="about.html" class="nav-link rounded-5 btn">About</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
+            <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
+            <a href="blog.html" class="nav-link rounded-5 active" aria-current="page">Blogs</a>
         </li>
     </ul>
-    <!-- Blogs -->
+
     <!-- Blog Header -->
     <section class="blog-header">
         <div class="container">
@@ -103,8 +120,8 @@
             <!-- Blog Post 1 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/Web-Development.jpg" class="card-img-top"
-                        alt="Why Your Business Needs a Website">
+                    <img src="img/Blog/Web-Development.jpg" class="card-img-top" alt="Why Your Business Needs a Website"
+                        loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">Why Your Business Needs a Website in 2025</h5>
                         <p class="card-text">Discover why a professional website is critical for credibility, SEO, and
@@ -117,7 +134,8 @@
             <!-- Blog Post 2 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/mobile_app_development.png" class="card-img-top" alt="Mobile App Trends">
+                    <img src="img/Blog/mobile_app_development.png" class="card-img-top" alt="Mobile App Trends"
+                        loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">Top Mobile App Trends to Watch This Year</h5>
                         <p class="card-text">From AI integration to PWAs, see what mobile development trends are shaping
@@ -130,7 +148,8 @@
             <!-- Blog Post 3 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/Business-Technology.jpeg" class="card-img-top" alt="Landing Page Tips">
+                    <img src="img/Blog/Business-Technology.jpeg" class="card-img-top" alt="Landing Page Tips"
+                        loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">What Makes a Great Landing Page?</h5>
                         <p class="card-text">Explore the key ingredients of a landing page that converts — layout, CTA,
@@ -143,7 +162,7 @@
             <!-- Blog Post 4 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/marketing_digital.jpg" class="card-img-top" alt="SEO Basics">
+                    <img src="img/Blog/marketing_digital.jpg" class="card-img-top" alt="SEO Basics" loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">SEO Basics for Small Businesses</h5>
                         <p class="card-text">Learn what SEO is, how it works, and simple ways to optimize your site to
@@ -156,7 +175,7 @@
             <!-- Blog Post 5 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack">
+                    <img src="img/Blog/startup-team.webp" class="card-img-top" alt="Choosing a Tech Stack" loading="lazy">
                     <div class="card-body">
                         <h5 class="card-title">How to Choose the Right Tech Stack</h5>
                         <p class="card-text">Backend, frontend, databases—here’s how we help clients choose the best
@@ -167,6 +186,7 @@
             </div>
         </div>
     </section>
+
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
@@ -196,10 +216,10 @@
                 <div class="col-md-3">
                     <h5>Follow Us</h5>
                     <div class="social-icons">
-                        <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" target="_blank" class="facebook" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" target="_blank" class="twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank" class="instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" class="linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
 
@@ -208,8 +228,8 @@
                     <h5>Newsletter</h5>
                     <p>Sign up for our newsletter to get the latest updates.</p>
                     <form action="#" method="post">
-                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-                        <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+                        <input type="email" class="form-control mb-2" placeholder="Enter your email" required aria-label="Email address for newsletter">
+                        <button type="submit" class="btn btn-light btn-block" aria-label="Subscribe to newsletter">Subscribe</button>
                     </form>
                 </div>
             </div>
