--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyWebsite | High-Quality Services and Solutions</title>
+
   <!-- SEO Essentials -->
   <meta name="title" content="My Web Site - Web & Mobile Solutions">
   <meta name="description" content="Professional web development, mobile apps, and digital marketing services.">
 
-  <!-- Open Graph (for social sharing previews) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="My Web Site - Web & Mobile Solutions">
   <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
+
+  <!-- Stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #f8f9fa;
     }
 
@@ -40,13 +44,10 @@
     }
 
     .feature-section {
-      background-size: cover;
-      background-position: center;
-      color: white;
-      display: flex;
-      justify-content: center;
-      padding: 60px 0;
       background-color: rgb(45 35 88);
+      color: white;
+      padding: 60px 0;
+      text-align: center;
     }
 
     .feature-section h2 {
@@ -57,8 +58,11 @@
 
     .feature-card {
       background-color: rgb(68, 105, 183);
+    }
 
+    .feature-card img {
       object-fit: cover;
+      height: 200px;
     }
 
     .footer {
@@ -95,21 +99,24 @@
 </head>
 
 <body>
+
+  <!-- Navigation -->
   <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-      <a href="index.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Home</a>
+      <a href="index.html" class="nav-link rounded-5 btn active" aria-current="page">Home</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="about.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">About</a>
+      <a href="about.html" class="nav-link rounded-5 btn">About</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="contact.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Contact</a>
+      <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="blog.html" class="nav-link rounded-5 btn" role="tab" aria-selected="true">Blogs</a>
+      <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
     </li>
   </ul>
+
   <!-- Hero Section -->
   <section class="hero-section">
     <div>
@@ -118,14 +125,15 @@
       <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
     </div>
   </section>
+
   <!-- Features Section -->
-  <section class="feature-section text-center">
+  <section class="feature-section">
     <div class="container">
       <h2>What We Do</h2>
       <div class="row">
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/web-devp.jpeg" class="card-img-top" alt="Web development service">
+            <img src="img/web-devp.jpeg" class="card-img-top" alt="Web development service" loading="lazy">
             <div class="card-body">
               <h5 class="card-title">Web Development</h5>
               <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
@@ -134,7 +142,7 @@
         </div>
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile development service">
+            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile development service" loading="lazy">
             <div class="card-body">
               <h5 class="card-title">Mobile Development</h5>
               <p class="card-text">Building custom mobile applications for your business needs.</p>
@@ -143,7 +151,7 @@
         </div>
         <div class="col-md-4">
           <div class="card feature-card">
-            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital Marketing service">
+            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital Marketing service" loading="lazy">
             <div class="card-body">
               <h5 class="card-title">Digital Marketing</h5>
               <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
@@ -158,6 +166,7 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
+
         <!-- Contact Info -->
         <div class="col-md-3">
           <h5>Contact Us</h5>
@@ -183,10 +192,10 @@
         <div class="col-md-3">
           <h5>Follow Us</h5>
           <div class="social-icons">
-            <a href="#" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" class="linkedin"><i class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank" aria-label="Facebook" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" aria-label="Twitter" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" aria-label="Instagram" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
 
@@ -195,8 +204,9 @@
           <h5>Newsletter</h5>
           <p>Sign up for our newsletter to get the latest updates.</p>
           <form action="#" method="post">
-            <input type="email" class="form-control mb-2" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn-light btn-block">Subscribe</button>
+            <label for="newsletterEmail" class="visually-hidden">Email address</label>
+            <input type="email" id="newsletterEmail" class="form-control mb-2" placeholder="Enter your email" required>
+            <button type="submit" class="btn btn-light w-100">Subscribe</button>
           </form>
         </div>
       </div>
@@ -208,14 +218,10 @@
     </div>
   </footer>
 
-  <!-- Bootstrap JS and dependencies -->
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
-</body>
 
+</body>
 </html>
