--- a/blog.html
+++ b/blog.html
@@ -21,71 +21,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-
     <!-- Custom CSS -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: rgb(45 35 88);
-        }
-
-        .blog-header {
-            background-color: #2d2358;
-            color: white;
-            padding: 60px 0;
-            text-align: center;
-        }
-
-        .blog-header h1 {
-            font-size: 3rem;
-        }
-
-        .card-title {
-            color: #2d2358;
-        }
-
-        .card-text {
-            font-size: 0.95rem;
-        }
-
-        .footer {
-            background-color: #343a40;
-            color: white;
-            padding: 40px 0;
-        }
-
-        .footer .footer-links a {
-            color: #adb5bd;
-            text-decoration: none;
-            margin-right: 20px;
-        }
-
-        .footer .footer-links a:hover {
-            color: #f8f9fa;
-        }
-
-        .footer .social-icons a {
-            color: #adb5bd;
-            margin: 0 10px;
-            font-size: 1.5rem;
-        }
-
-        .footer .social-icons a:hover {
-            color: #f8f9fa;
-        }
-
-        .footer .contact-info p {
-            margin: 5px 0;
-            word-wrap: break-word;
-        }
-
-        /* Responsive Fix */
-        @media (max-width: 768px) {
-            .blog-header h1 {
-                font-size: 2rem;
-            }
-        }
-    </style>
+     <link rel="stylesheet" href="CSS/Blog_Style.css">
 </head>
 
 <body>
