--- a/contact.html
+++ b/contact.html
@@ -20,90 +20,10 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
-    <!-- Styles -->
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #2d2358;
-            color: #fff;
-        }
-
-        .form-container {
-            background-color: #e1dcdc;
-            color: #000;
-            border-radius: 8px;
-            padding: 30px;
-            margin: 40px auto;
-            max-width: 700px;
-        }
-
-        label {
-            font-weight: 600;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        select,
-        textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 8px;
-            margin-bottom: 16px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            resize: vertical;
-        }
-
-        input[type="submit"] {
-            background-color: #04AA6D;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        .footer {
-            background-color: #343a40;
-            color: white;
-            padding: 40px 0;
-        }
-
-        .footer .footer-links a {
-            color: #adb5bd;
-            text-decoration: none;
-            margin-right: 20px;
-        }
-
-        .footer .footer-links a:hover {
-            color: #f8f9fa;
-        }
-
-        .footer .social-icons a {
-            color: #adb5bd;
-            margin: 0 10px;
-            font-size: 1.5rem;
-        }
-
-        .footer .social-icons a:hover {
-            color: #f8f9fa;
-        }
-
-        @media (max-width: 768px) {
-            .form-container {
-                padding: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/Contact_Style.css">
 </head>
 
 <body>
-
     <!-- Navigation -->
     <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
