--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
   <!-- Custom CSS -->
-  <style>
+   <link rel="stylesheet" href="CSS/Index_Style.css">
+  <!-- <style>
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #f8f9fa;
@@ -95,7 +95,7 @@
       margin: 5px 0;
       word-wrap: break-word;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
