--- a/about.html
+++ b/about.html
@@ -13,63 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      color: white;
-      background-color: rgb(45 35 88);
-    }
-
-    .about-header {
-      color: white;
-      padding: 30px;
-      text-align: center;
-    }
-
-    .about-section {
-      padding: 50px 20px;
-    }
-
-    .about-section h2 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-    }
-
-    .about-section p {
-      font-size: 1.2rem;
-      line-height: 1.6;
-    }
-
-    .footer {
-      background-color: #343a40;
-      color: white;
-      padding: 40px 0;
-    }
-
-    .footer .footer-links a {
-      color: #adb5bd;
-      text-decoration: none;
-      margin-right: 20px;
-    }
-
-    .footer .footer-links a:hover {
-      color: #f8f9fa;
-    }
-
-    .footer .social-icons a {
-      color: #adb5bd;
-      margin: 0 10px;
-      font-size: 1.5rem;
-    }
-
-    .footer .social-icons a:hover {
-      color: #f8f9fa;
-    }
-
-    .footer .contact-info p {
-      margin: 5px 0;
-    }
-  </style>
+ <link rel="stylesheet" href="CSS/About_Style.css">
 </head>
 
 <body>
