--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>ThirdEye Digital Hub | High-Quality Services and Solutions</title>
 
   <!-- SEO Essentials -->
-  <meta name="title" content="My Web Site - Web & Mobile Solutions">
+  <meta name="title" content="ThirdEye Digital Hub - Web & Mobile Solutions">
   <meta name="description" content="Professional web development, mobile apps, and digital marketing services.">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="My Web Site - Web & Mobile Solutions">
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="ThirdEye Digital Hub - Web & Mobile Solutions">
   <meta property="og:description" content="Professional web development, mobile apps, and digital marketing services.">
 
   <!-- Stylesheets -->
@@ -20,68 +20,60 @@
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="CSS/Comman_Style.css">
   <link rel="stylesheet" href="CSS/Index_Style.css">
-
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" id="pillNav2" role="tablist"
+  <nav class="nav nav-pills nav-fill gap-2 p-1 small bg-primary shadow-sm" role="navigation"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-    <li class="nav-item" role="presentation">
-      <a href="index.html" class="nav-link rounded-5 btn active" aria-current="page">Home</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="about.html" class="nav-link rounded-5 btn">About</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
-    </li>
-    <li class="nav-item" role="presentation">
-      <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
-    </li>
-  </ul>
+    <a href="index.html" class="nav-link rounded-5 btn active" aria-current="page">Home</a>
+    <a href="about.html" class="nav-link rounded-5 btn">About</a>
+    <a href="contact.html" class="nav-link rounded-5 btn">Contact</a>
+    <a href="blog.html" class="nav-link rounded-5 btn">Blogs</a>
+  </nav>
 
   <!-- Hero Section -->
-  <section class="hero-section">
+  <section class="hero-section d-flex align-items-center justify-content-center text-center py-5">
     <div>
-      <h1>Welcome to ThirdEye Digital Hub</h1>
-      <p>We deliver high-quality services with passion and professionalism.</p>
-      <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
+      <h1 class="display-4 fw-bold">Welcome to ThirdEye Digital Hub</h1>
+      <p class="lead">We deliver high-quality services with passion and professionalism.</p>
+      <a href="about.html" class="btn btn-primary btn-lg mt-3">Learn More</a>
     </div>
   </section>
 
   <!-- Features Section -->
-  <section class="feature-section">
+  <section class="feature-section py-5">
     <div class="container">
-      <h2>What We Do</h2>
-      <div class="row">
+      <h2 class="text-center mb-5">What We Do</h2>
+      <div class="row g-4">
         <div class="col-md-4">
-          <div class="card feature-card">
-            <img src="img/web-devp.jpeg" class="card-img-top" alt="Web development service" loading="lazy">
+          <div class="card feature-card h-100 shadow-sm">
+            <img src="img/web-devp.jpeg" class="card-img-top" alt="Modern website development interface" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Web Development</h5>
+              <h3 class="card-title h5">Web Development</h3>
               <p class="card-text">We create modern, responsive, and user-friendly websites.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card feature-card">
-            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile development service" loading="lazy">
+          <div class="card feature-card h-100 shadow-sm">
+            <img src="img/Mob.jpeg" class="card-img-top" alt="Mobile application interface" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Mobile Development</h5>
+              <h3 class="card-title h5">Mobile Development</h3>
               <p class="card-text">Building custom mobile applications for your business needs.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card feature-card">
-            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital Marketing service" loading="lazy">
+          <div class="card feature-card h-100 shadow-sm">
+            <img src="img/Digital.jpeg" class="card-img-top" alt="Digital marketing strategy chart" loading="lazy">
             <div class="card-body">
-              <h5 class="card-title">Digital Marketing</h5>
+              <h3 class="card-title h5">Digital Marketing</h3>
               <p class="card-text">We help you reach your audience with effective marketing strategies.</p>
             </div>
           </div>
@@ -91,69 +83,63 @@
   </section>
 
   <!-- Footer Section -->
-  <footer class="footer">
+  <footer class="footer bg-light py-5">
     <div class="container">
       <div class="row">
-
         <!-- Contact Info -->
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <h5>Contact Us</h5>
-          <div class="contact-info">
-            <p><strong>Email:</strong> info@ThirdEye Digital Hub.com</p>
+          <address>
+            <p><strong>Email:</strong> <a href="mailto:info@ThirdEyeDigitalHub.com">info@ThirdEyeDigitalHub.com</a></p>
             <p><strong>Phone:</strong> +1 234 567 890</p>
             <p><strong>Address:</strong> 1234 Street Name, City, Country</p>
-          </div>
+          </address>
         </div>
 
         <!-- Quick Links -->
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <h5>Quick Links</h5>
-          <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="blog.html">Blogs</a>
-            <a href="contact.html">Contact</a>
-          </div>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blogs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
 
         <!-- Social Media -->
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <h5>Follow Us</h5>
-          <div class="social-icons">
-            <a href="#" target="_blank" aria-label="Facebook" rel="noopener noreferrer"><i
-                class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" aria-label="Twitter" rel="noopener noreferrer"><i
-                class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" aria-label="Instagram" rel="noopener noreferrer"><i
-                class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer"><i
-                class="fab fa-linkedin"></i></a>
+          <div class="social-icons d-flex gap-3">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter fa-lg"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
           </div>
         </div>
 
         <!-- Newsletter Signup -->
-        <div class="col-md-3">
+        <div class="col-md-3 mb-4">
           <h5>Newsletter</h5>
           <p>Sign up for our newsletter to get the latest updates.</p>
-          <form action="#" method="post">
+          <form action="#" method="post" novalidate>
             <label for="newsletterEmail" class="visually-hidden">Email address</label>
-            <input type="email" id="newsletterEmail" class="form-control mb-2" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn-light w-100">Subscribe</button>
+            <input type="email" id="newsletterEmail" name="email" class="form-control mb-2"
+              placeholder="Enter your email" required>
+            <button type="submit" class="btn btn-primary w-100">Subscribe</button>
           </form>
         </div>
       </div>
 
-      <!-- Copyright -->
       <div class="text-center mt-4">
-        <p>&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
+        <p class="mb-0">&copy; 2025 ThirdEye Digital Hub. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
 
-  <!-- Bootstrap 5 JS -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
 </body>
 
